--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
   <meta charset="UTF-8">
   <title>Home | Poutrel</title>
   <link rel="stylesheet" href="style.css">
+  <script src="functions.js"></script>
 </head>
-<body>
-  <header>
-
-  </header>
-  <div></div>
+<body onload="drawHeader()">
+  <div class="header main">
+    <a href="#">partners</a>
+    <a href="#">about</a>
+    <img src="images/" alt="Poutrel logo">
+    <a href="map/">locations</a>
+    <a href="jobs/">jobs</a>
+    <div class="languages">
+      <a>FR</a>
+      <a>NL</a>
+    </div>
+  </div>
+  <div class="wrapper">
+    <div class="canvas">
+      <canvas id="canvas1"></canvas>
+    </div>
+  </div>
 </body>
 </html>
