--- a/map/index.html
+++ b/map/index.html
@@ -3,20 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <title>Home | Poutrel</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <header>
-    <span>partners</span>
-    <span>about</span>
-    <img src="images/" alt="Poutrel logo">
-    <span>locations</span>
-    <span>jobs</span>
+  <div class="header">
+    <a>partners</a>
+    <a>about</a>
+    <a href="../">
+      <img src="images/" alt="Poutrel logo">
+    </a>
+    <a href="../map/">locations</a>
+    <a href="../jobs/">jobs</a>
     <div class="languages">
-      <span>FR</span>
-      <span>NL</span>
+      <a>FR</a>
+      <a>NL</a>
     </div>
-  </header>
+  </div>
   <div>
     <canvas id="canvas1"></canvas>
   </div>
