only images left

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a>
       <img src="images/" alt="Poutrel logo">
     </a>
-    <a href="map/">locations</a>
+    <a href="map/">locaties</a>
     <a href="jobs/">jobs</a>
     <div class="languages">
       <a>FR</a>
@@ -22,7 +22,7 @@
   <div class="wrapper">
     <div class="canvas">
       <canvas id="canvas1"></canvas>
-      <button onclick="location.href='jobs/'">Let's Grow!</button>
+      <button onclick="location.href='jobs/'">Doe mee!</button>
     </div>
   </div>
 </body>
