finished main page

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <div class="header main">
     <a href="#partners">partners</a>
     <a href="#about">about</a>
-    <a>
-      <img src="images/" alt="Poutrel logo">
+    <a class="img">
+      <img src="images/poutrel_logo.png" alt="Poutrel logo">
     </a>
     <a href="map/">locaties</a>
     <a href="jobs/">jobs</a>
@@ -20,7 +20,7 @@
     </div>
   </div>
   <div class="wrapper">
-    <div class="canvas">
+    <div class="canvasMain1">
       <canvas id="canvas1"></canvas>
       <button onclick="location.href='jobs/'">Doe mee!</button>
     </div>
