add part of map and about page

--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body onload="drawMainPage()">
-  <div class="header main">
-    <a href="#partners">partners</a>
-    <a href="#about">about</a>
-    <a class="img">
-      <img src="images/poutrel_logo.png" alt="Poutrel logo">
-    </a>
-    <a href="map/">locaties</a>
-    <a href="jobs/">jobs</a>
-    <div class="languages">
-      <a>FR</a>
-      <a>NL</a>
+  <header>
+    <div class="header main">
+      <a href="#partners">partners</a>
+      <a href="#about">about</a>
+      <a class="img">
+        <img src="images/poutrel_logo.png" alt="Poutrel logo">
+      </a>
+      <a href="map/">locaties</a>
+      <a href="jobs/">jobs</a>
+      <div class="languages">
+        <a>FR</a>
+        <a>NL</a>
+      </div>
     </div>
-  </div>
+  </header>
   <div class="wrapper">
     <div class="canvasMain1">
       <canvas id="canvas1"></canvas>
