--- a/map/index.html
+++ b/map/index.html
@@ -6,21 +6,32 @@
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <div class="header">
-    <a>partners</a>
-    <a>about</a>
-    <a href="../">
-      <img src="images/" alt="Poutrel logo">
-    </a>
-    <a href="../map/">locations</a>
-    <a href="../jobs/">jobs</a>
-    <div class="languages">
-      <a>FR</a>
-      <a>NL</a>
+  <header>
+    <input id="header-collapsible" class="toggle" type="checkbox">
+    <label for="header-collapsible" class="lbl-toggle">
+      <div class="l1 line"></div>
+      <div class="l2 line"></div>
+      <div class="l3 line"></div>
+    </label>
+    <div class="header other">
+      <a>partners</a>
+      <a>about</a>
+      <a href="../" class="img">
+        <img src="../images/poutrel_logo.png" alt="Poutrel logo">
+      </a>
+      <a href="../map/">locations</a>
+      <a href="../jobs/">jobs</a>
+      <div class="languages">
+        <a>FR</a>
+        <a>NL</a>
+      </div>
     </div>
-  </div>
-  <div>
-    <canvas id="canvas1"></canvas>
+  </header>
+  <div class="wrapper">
+    <div class="map">
+      <div>info</div>
+      <div class="houses grid"></div>
+    </div>
   </div>
 </body>
 </html>
