fixed about css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <header>
     <div class="header main">
       <a href="#partners">partners</a>
-      <a href="#about">about</a>
+      <a href="about/">about</a>
       <a class="img">
         <img src="images/poutrel_logo.png" alt="Poutrel logo">
       </a>
