finished map apart from images

--- a/map/index.html
+++ b/map/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <title>Home | Poutrel</title>
   <link rel="stylesheet" href="../style.css">
+  <script src="../functions.js"></script>
 </head>
-<body>
+<body class="tk-tenon">
   <header>
     <input id="header-collapsible" class="toggle" type="checkbox">
     <label for="header-collapsible" class="lbl-toggle">
@@ -28,9 +29,183 @@
     </div>
   </header>
   <div class="wrapper">
+    <div class="title">
+      <H2>Locaties</H2>
+    </div>
     <div class="map">
-      <div>info</div>
-      <div class="houses grid"></div>
+      <div class="info">
+        <div class="infoCard" id="anker" style="display: none;">
+          <div class="person">
+            <div class="head"></div>
+            <div class="body"></div>
+          </div>
+          <h2>Het Anker</h2>
+          <img src="" alt="Het Anker gebouw">
+          <div class="adress">
+            <span>Marqstraat 25</span>
+            <span>1000 Brussel</span>
+          </div>
+          <div class="otherInfo">
+            <span class="phone">GSM: 02.889 00 80</span>
+            <a class="mail" href="mailto:anker@ld3.be">anker@ld3.be</a>
+          </div>
+          <a class="linkToWebpage" href="">Meer Informatie</a>
+        </div>
+        <div class="infoCard" id="cosmos" style="display: none;">
+          <div class="person">
+            <div class="head"></div>
+            <div class="body"></div>
+          </div>
+          <h2>Cosmos</h2>
+          <img src="" alt="Cosmos gebouw">
+          <div class="adress">
+            <span>Jorezstraat 21</span>
+            <span>1070 Anderlecht</span>
+          </div>
+          <div class="otherInfo">
+            <span class="phone">GSM: 02/527 89 73</span>
+            <a class="mail" href="mailto:info@cosmosvzw.be">info@cosmosvzw.be</a>
+          </div>
+          <a class="linkToWebpage" href="">Meer Informatie</a>
+        </div>
+        <div class="infoCard" id="forum" style="display: none;">
+          <div class="person">
+            <div class="head"></div>
+            <div class="body"></div>
+          </div>
+          <h2>Forum</h2>
+          <img src="" alt="Forum gebouw">
+          <div class="adress">
+            <span>Muggenstraat 5</span>
+            <span>1000 Brussel</span>
+          </div>
+          <div class="otherInfo">
+            <span class="phone">GSM: 0489 30 55 87</span>
+            <a class="mail" href="mailto:forum@ld3.be">forum@ld3.be</a>
+          </div>
+          <a class="linkToWebpage" href="">Meer Informatie</a>
+        </div>
+        <div class="infoCard" id="miro" style="display: none;">
+          <div class="person">
+            <div class="head"></div>
+            <div class="body"></div>
+          </div>
+          <h2>Miro</h2>
+          <img src="" alt="Miro gebouw">
+          <div class="adress">
+            <span>De Merodestraat 449</span>
+            <span>1190 Vorst</span>
+          </div>
+          <div class="otherInfo">
+            <span class="phone">GSM: 0489 30 54 94</span>
+            <a class="mail" href="mailto:miro@ld3.be">miro@ld3.be</a>
+          </div>
+          <a class="linkToWebpage" href="">Meer Informatie</a>
+        </div>
+        <div class="infoCard" id="vives" style="display: none;">
+          <div class="person">
+            <div class="head"></div>
+            <div class="body"></div>
+          </div>
+          <h2>Vives</h2>
+          <img src="" alt="Vives gebouw">
+          <div class="adress">
+            <span>Dokter Lemoinelaan 13</span>
+            <span>1070 Anderlecht</span>
+          </div>
+          <div class="otherInfo">
+            <span class="phone">GSM: 02/527 05 46</span>
+            <a class="mail" href="mailto:vives@cosmosvzw.be">vives@cosmosvzw.be</a>
+          </div>
+          <a class="linkToWebpage" href="">Meer Informatie</a>
+        </div>
+        <div class="infoCard" id="harmonie" style="display: none;">
+          <div class="person">
+            <div class="head"></div>
+            <div class="body"></div>
+          </div>
+          <h2>De Harmonie</h2>
+          <img src="" alt="De Harmonie gebouw">
+          <div class="adress">
+            <span>Antwerpsesteenweg 24</span>
+            <span>1000 Brussel</span>
+          </div>
+          <div class="otherInfo">
+            <span class="phone">GSM: 02/203 28 48</span>
+            <a class="mail" href="mailto:info@deharmonie.be">info@deharmonie.be</a>
+          </div>
+          <a class="linkToWebpage" href="">Meer Informatie</a>
+        </div>
+        <div class="infoCard" id="luca" style="display: none;">
+          <div class="person">
+            <div class="head"></div>
+            <div class="body"></div>
+          </div>
+          <h2>Luca</h2>
+          <img src="" alt="Luca gebouw">
+          <div class="adress">
+            <span>Paleizenstraat 70</span>
+            <span>1030 Schaarbeek</span>
+          </div>
+          <div class="otherInfo">
+            <span class="phone">GSM: 02/527 89 73</span>
+            <a class="mail" href="mailto:info@cosmosvzw.be">info@cosmosvzw.be</a>
+          </div>
+          <a class="linkToWebpage" href="">Meer Informatie</a>
+        </div>
+        <div class="infoCard" id="bricoteam" style="display: none;">
+          <div class="person">
+            <div class="head"></div>
+            <div class="body"></div>
+          </div>
+          <h2>Bricoteam</h2>
+          <img src="" alt="bricoteam gebouw">
+          <div class="adress">
+            <span>Gaucheretstraat 64</span>
+            <span>1030 Schaarbeek</span>
+          </div>
+          <div class="otherInfo">
+            <span class="phone">GSM: 02/274 01 95</span>
+            <a class="mail" href="mailto:info@bricoteam.brussels">info@bricoteam.brussels</a>
+          </div>
+          <a class="linkToWebpage" href="">Meer Informatie</a>
+        </div>
+        <span class="infospanmap">Selecteer een locatie om info te zien!</span>
+      </div>
+      <div class="houses grid">
+        <button onclick="mapShowInfo('anker')" class="house anker">
+          <div class="head"></div>
+          <div class="body"></div>
+        </button>
+        <button onclick="mapShowInfo('cosmos')" class="house cosmos">
+          <div class="head"></div>
+          <div class="body"></div>
+        </button>
+        <button onclick="mapShowInfo('forum')" class="house forum">
+          <div class="head"></div>
+          <div class="body"></div>
+        </button>
+        <button onclick="mapShowInfo('miro')" class="house miro">
+          <div class="head"></div>
+          <div class="body"></div>
+        </button>
+        <button onclick="mapShowInfo('vives')" class="house vives">
+          <div class="head"></div>
+          <div class="body"></div>
+        </button>
+        <button onclick="mapShowInfo('harmonie')" class="house harmonie">
+          <div class="head"></div>
+          <div class="body"></div>
+        </button>
+        <button onclick="mapShowInfo('luca')" class="house luca">
+          <div class="head"></div>
+          <div class="body"></div>
+        </button>
+        <button onclick="mapShowInfo('bricoteam')" class="house bricoteam">
+          <div class="head"></div>
+          <div class="body"></div>
+        </button>
+      </div>
     </div>
   </div>
 </body>
