--- a/map/index.html
+++ b/map/index.html
@@ -5,6 +5,7 @@
   <title>Home | Poutrel</title>
   <link rel="stylesheet" href="../style.css">
   <script src="../functions.js"></script>
+  <link rel="icon" type="image/x-icon" href="../images/favicon.svg">
 </head>
 <body class="tk-tenon">
   <header>
@@ -16,7 +17,7 @@
     </label>
     <div class="header other">
       <a>partners</a>
-      <a>about</a>
+      <a href="../about/">about</a>
       <a href="../" class="img">
         <img src="../images/poutrel_logo.png" alt="Poutrel logo">
       </a>
