--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Home | Poutrel</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body onload="drawMainPage()">
+<body onload="drawMainPage()" class="tk-tenon">
   <header>
     <div class="header main">
       <a href="#partners">partners</a>
