--- a/jobs/index.html
+++ b/jobs/index.html
@@ -5,7 +5,7 @@
   <title>Jobs | Poutrel</title>
   <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+<body class="tk-tenon">
   <header>
     <input id="header-collapsible" class="toggle" type="checkbox">
     <label for="header-collapsible" class="lbl-toggle">
