--- a/about/index.html
+++ b/about/index.html
@@ -5,9 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Poutrel</title>
   <link rel="stylesheet" href="styleabout.css">
+  <link rel="stylesheet" href="../style.css">
 </head>
-<body>
-  <header></header>
+<body class="tk-tenon">
+  <header>
+    <input id="header-collapsible" class="toggle" type="checkbox">
+    <label for="header-collapsible" class="lbl-toggle">
+      <div class="l1 line"></div>
+      <div class="l2 line"></div>
+      <div class="l3 line"></div>
+    </label>
+    <div class="header other">
+      <a>partners</a>
+      <a href="../about/">about</a>
+      <a href="../" class="img">
+        <img src="../images/poutrel_logo.png" alt="Poutrel logo">
+      </a>
+      <a href="../map/">locations</a>
+      <a href="../jobs/">jobs</a>
+      <div class="languages">
+        <a>FR</a>
+        <a>NL</a>
+      </div>
+    </div>
+  </header>
 
 
   <main>
