add links to websites

--- a/map/index.html
+++ b/map/index.html
@@ -50,7 +50,7 @@
             <span class="phone">GSM: 02.889 00 80</span>
             <a class="mail" href="mailto:anker@ld3.be">anker@ld3.be</a>
           </div>
-          <a class="linkToWebpage" href="">Meer Informatie</a>
+          <a class="linkToWebpage" href="https://ld3.be/anker-nieuw/" target="_blank">Meer Informatie</a>
         </div>
         <div class="infoCard" id="cosmos" style="display: none;">
           <div class="person">
@@ -67,7 +67,7 @@
             <span class="phone">GSM: 02/527 89 73</span>
             <a class="mail" href="mailto:info@cosmosvzw.be">info@cosmosvzw.be</a>
           </div>
-          <a class="linkToWebpage" href="">Meer Informatie</a>
+          <a class="linkToWebpage" href="https://cosmosvzw.be/ldc-cosmos/" target="_blank">Meer Informatie</a>
         </div>
         <div class="infoCard" id="forum" style="display: none;">
           <div class="person">
@@ -84,7 +84,7 @@
             <span class="phone">GSM: 0489 30 55 87</span>
             <a class="mail" href="mailto:forum@ld3.be">forum@ld3.be</a>
           </div>
-          <a class="linkToWebpage" href="">Meer Informatie</a>
+          <a class="linkToWebpage" href="https://ld3.be/forum-nieuw/" target="_blank">Meer Informatie</a>
         </div>
         <div class="infoCard" id="miro" style="display: none;">
           <div class="person">
@@ -101,7 +101,7 @@
             <span class="phone">GSM: 0489 30 54 94</span>
             <a class="mail" href="mailto:miro@ld3.be">miro@ld3.be</a>
           </div>
-          <a class="linkToWebpage" href="">Meer Informatie</a>
+          <a class="linkToWebpage" href="https://ld3.be/miro/" target="_blank">Meer Informatie</a>
         </div>
         <div class="infoCard" id="vives" style="display: none;">
           <div class="person">
@@ -118,7 +118,7 @@
             <span class="phone">GSM: 02/527 05 46</span>
             <a class="mail" href="mailto:vives@cosmosvzw.be">vives@cosmosvzw.be</a>
           </div>
-          <a class="linkToWebpage" href="">Meer Informatie</a>
+          <a class="linkToWebpage" href="https://cosmosvzw.be/ldc-vives/" target="_blank">Meer Informatie</a>
         </div>
         <div class="infoCard" id="harmonie" style="display: none;">
           <div class="person">
@@ -135,7 +135,7 @@
             <span class="phone">GSM: 02/203 28 48</span>
             <a class="mail" href="mailto:info@deharmonie.be">info@deharmonie.be</a>
           </div>
-          <a class="linkToWebpage" href="">Meer Informatie</a>
+          <a class="linkToWebpage" href="https://www.deharmonie.be/" target="_blank">Meer Informatie</a>
         </div>
         <div class="infoCard" id="luca" style="display: none;">
           <div class="person">
@@ -152,7 +152,7 @@
             <span class="phone">GSM: 02/527 89 73</span>
             <a class="mail" href="mailto:info@cosmosvzw.be">info@cosmosvzw.be</a>
           </div>
-          <a class="linkToWebpage" href="">Meer Informatie</a>
+          <a class="linkToWebpage" href="https://www.luca-arts.be/en/campus-brussels-sint-lukas" target="_blank">Meer Informatie</a>
         </div>
         <div class="infoCard" id="bricoteam" style="display: none;">
           <div class="person">
@@ -169,7 +169,7 @@
             <span class="phone">GSM: 02/274 01 95</span>
             <a class="mail" href="mailto:info@bricoteam.brussels">info@bricoteam.brussels</a>
           </div>
-          <a class="linkToWebpage" href="">Meer Informatie</a>
+          <a class="linkToWebpage" href="https://bricoteam.brussels/nl/wat-doen-wij/" target="_blank">Meer Informatie</a>
         </div>
         <span class="infospanmap">Selecteer een locatie om info te zien!</span>
       </div>
