changed about page a bit

--- a/about/index.html
+++ b/about/index.html
@@ -6,8 +6,9 @@
   <title>Poutrel</title>
   <link rel="stylesheet" href="styleabout.css">
   <link rel="stylesheet" href="../style.css">
+  <script src="../functions.js"></script>
 </head>
-<body class="tk-tenon">
+<body class="tk-tenon" onload="drawAbout()">
   <header>
     <input id="header-collapsible" class="toggle" type="checkbox">
     <label for="header-collapsible" class="lbl-toggle">
@@ -88,7 +89,5 @@
 
 
   </main>
-
-  <script src="functions.js"></script>
 </body>
 </html>
