add favicon and onloads

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <title>Home | Poutrel</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/x-icon" href="../images/favicon.svg">
 </head>
-<body onload="drawMainPage()" class="tk-tenon">
+<body onload="drawMainPage()" onresize="drawMainPage()" class="tk-tenon">
   <header>
     <div class="header main">
       <a href="#partners">partners</a>
