--- a/jobs/index.html
+++ b/jobs/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <title>Jobs | Poutrel</title>
   <link rel="stylesheet" href="../style.css">
+  <link rel="icon" type="image/x-icon" href="../images/favicon.svg">
 </head>
-<body class="tk-tenon">
+<body class="tk-tenon" onresize="">
   <header>
     <input id="header-collapsible" class="toggle" type="checkbox">
     <label for="header-collapsible" class="lbl-toggle">
@@ -28,7 +29,9 @@
     </div>
   </header>
   <div>
-    <canvas id="canvas1"></canvas>
+    <div class="canvasJobs1">
+      <canvas id="canvas1"></canvas>
+    </div>
   </div>
 </body>
 </html>
