--- a/about/index.html
+++ b/about/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styleabout.css">
   <link rel="stylesheet" href="../style.css">
   <script src="../functions.js"></script>
+  <link rel="icon" type="image/x-icon" href="../images/favicon.svg">
 </head>
 <body class="tk-tenon" onload="drawAbout()">
   <header>
