--- a/map/index.html
+++ b/map/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Home | Poutrel</title>
+  <title>Locaties | Poutrel</title>
   <link rel="stylesheet" href="../style.css">
   <script src="../functions.js"></script>
   <link rel="icon" type="image/x-icon" href="../images/favicon.svg">
