--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Poutrel</title>
+  <title>About | Poutrel</title>
   <link rel="stylesheet" href="styleabout.css">
   <link rel="stylesheet" href="../style.css">
   <script src="../functions.js"></script>
