continued with job page and redesigned main page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
   <div class="wrapper">
     <div class="canvasMain1">
       <canvas id="canvas1"></canvas>
-      <button onclick="location.href='jobs/'">Doe mee!</button>
+      <div>
+        <span>Wij zijn allemaal mensen.</span>
+        <span>We zijn gelijkwaardig.</span>
+        <button onclick="location.href='jobs/'">Leer ons kennen!</button>
+      </div>
     </div>
   </div>
 </body>
