--- a/jobs/index.html
+++ b/jobs/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/x-icon" href="../images/favicon.svg">
   <script src="../functions.js"></script>
 </head>
-<body class="tk-tenon" onload="drawJobs()" onresize="drawJobs()">
+<body class="tk-tenon">
   <header>
     <input id="header-collapsible" class="toggle" type="checkbox">
     <label for="header-collapsible" class="lbl-toggle">
@@ -31,12 +31,182 @@
   </header>
   <main class="wrapper jobs">
     <div class="canvasJobs1">
-      <canvas id="canvas1"></canvas>
+      <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+      <!-- Created with Inkscape (http://www.inkscape.org/) -->
+
+      <svg
+        width="512"
+        height="384"
+        viewBox="0 0 512 384"
+        version="1.1"
+        id="svg1"
+        inkscape:export-filename="bitmap.svg"
+        inkscape:export-xdpi="96"
+        inkscape:export-ydpi="96"
+        inkscape:version="1.4 (e7c3feb100, 2024-10-09)"
+        sodipodi:docname="bitmap.svg"
+        xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+        xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:svg="http://www.w3.org/2000/svg">
+        <sodipodi:namedview
+          id="namedview1"
+          pagecolor="#505050"
+          bordercolor="#ffffff"
+          borderopacity="1"
+          inkscape:showpageshadow="0"
+          inkscape:pageopacity="0"
+          inkscape:pagecheckerboard="1"
+          inkscape:deskcolor="#505050"
+          inkscape:document-units="px"
+          inkscape:zoom="1.4142136"
+          inkscape:cx="211.42493"
+          inkscape:cy="299.81327"
+          inkscape:window-width="2546"
+          inkscape:window-height="1546"
+          inkscape:window-x="0"
+          inkscape:window-y="0"
+          inkscape:window-maximized="1"
+          inkscape:current-layer="layer1" />
+        <defs
+          id="defs1">
+          <clipPath
+            clipPathUnits="userSpaceOnUse"
+            id="clipPath3">
+            <rect
+              style="fill:#ffffff;stroke-width:0.247219"
+              id="rect3"
+              width="210.00293"
+              height="297.00247"
+              x="0.0010438709"
+              y="-0.0013294705" />
+          </clipPath>
+          <clipPath
+            clipPathUnits="userSpaceOnUse"
+            id="clipPath4">
+            <rect
+              style="fill:#f0a71e;fill-opacity:1;stroke-width:0.409906"
+              id="rect5"
+              width="210.22102"
+              height="210.19383"
+              x="-0.081801042"
+              y="2.7635317" />
+          </clipPath>
+        </defs>
+        <g
+          inkscape:label="Layer 1"
+          inkscape:groupmode="layer"
+          id="layer1">
+          <g
+            id="g1"
+            transform="matrix(2.4395826,0,0,2.4395826,4.1717114e-4,-6.8746762)"
+            style="display:inline"
+            clip-path="url(#clipPath4)">
+            <g
+              id="g2"
+              style="display:inline"
+              clip-path="url(#clipPath3)"
+              transform="translate(0,1.8708867)">
+              <circle
+                style="fill:#f9f8f3;fill-opacity:1;stroke-width:0.161567"
+                id="path1"
+                r="40.369999"
+                cy="103.05456"
+                cx="-1.6274706" />
+              <circle
+                style="fill:#f9f8f3;fill-opacity:1;stroke-width:0.202949"
+                id="path1-5"
+                r="50.709999"
+                cy="137.5533"
+                cx="62.791698" />
+              <circle
+                style="fill:#f9f8f3;fill-opacity:1;stroke-width:0.202949"
+                id="path1-5-2"
+                r="50.709999"
+                cy="163.93913"
+                cx="126.30824" />
+              <circle
+                style="fill:#f9f8f3;fill-opacity:1;stroke-width:0.202949"
+                id="path1-5-2-7"
+                r="50.709999"
+                cy="127.18213"
+                cx="190.85927" />
+              <rect
+                style="fill:#f9f8f3;fill-opacity:1;stroke-width:0.264583"
+                id="rect1"
+                width="290.84"
+                height="213.84"
+                x="-45.955692"
+                y="123.79949" />
+              <ellipse
+                style="fill:#2c463f;fill-opacity:1;stroke-width:0.359324"
+                id="path2"
+                cx="213.61739"
+                cy="68.481537"
+                rx="38.839558"
+                ry="39.419254" />
+              <circle
+                style="fill:#f0a71e;fill-opacity:1;stroke-width:0.409906"
+                id="path3"
+                cx="-1.4494081"
+                cy="59.496277"
+                r="11.593898" />
+            </g>
+          </g>
+        </g>
+      </svg>
     </div>
     <div class="vacancies">
       <h1>Vacatures</h1>
       <div class="list">
-        <div class="vacancy"></div>
+        <div class="vacancy">
+          <h2 class="tk-tenon">Learning&Development</h2>
+          <span class="company">Bricoteam vzw</span>
+          <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aspernatur et dolor suscipit animi temporibus, tenetur, autem distinctio fugiat eius placeat quia? Ea molestias non ipsum iste itaque reiciendis asperiores tempora dolores! Corporis voluptas accusantium optio earum ut aliquid iure maiores veniam recusandae, eos repellendus quisquam nam quibusdam velit eveniet.</span>
+          <a class="linkToWebpage" href="https://ld3.be/anker-nieuw/" target="_blank">ga naar de website</a>
+        </div>
+        <div class="vacancy">
+          <h2 class="tk-tenon">Learning&Development</h2>
+          <span class="company">Bricoteam vzw</span>
+          <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aspernatur et dolor suscipit animi temporibus, tenetur, autem distinctio fugiat eius placeat quia? Ea molestias non ipsum iste itaque reiciendis asperiores tempora dolores! Corporis voluptas accusantium optio earum ut aliquid iure maiores veniam recusandae, eos repellendus quisquam nam quibusdam velit eveniet.</span>
+          <a class="linkToWebpage" href="https://ld3.be/anker-nieuw/" target="_blank">ga naar de website</a>
+        </div>
+        <div class="vacancy">
+          <h2 class="tk-tenon">Learning&Development</h2>
+          <span class="company">Bricoteam vzw</span>
+          <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aspernatur et dolor suscipit animi temporibus, tenetur, autem distinctio fugiat eius placeat quia? Ea molestias non ipsum iste itaque reiciendis asperiores tempora dolores! Corporis voluptas accusantium optio earum ut aliquid iure maiores veniam recusandae, eos repellendus quisquam nam quibusdam velit eveniet.</span>
+          <a class="linkToWebpage" href="https://ld3.be/anker-nieuw/" target="_blank">ga naar de website</a>
+        </div>
+        <div class="vacancy">
+          <h2 class="tk-tenon">Learning&Development</h2>
+          <span class="company">Bricoteam vzw</span>
+          <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aspernatur et dolor suscipit animi temporibus, tenetur, autem distinctio fugiat eius placeat quia? Ea molestias non ipsum iste itaque reiciendis asperiores tempora dolores! Corporis voluptas accusantium optio earum ut aliquid iure maiores veniam recusandae, eos repellendus quisquam nam quibusdam velit eveniet.</span>
+          <a class="linkToWebpage" href="https://ld3.be/anker-nieuw/" target="_blank">ga naar de website</a>
+        </div>
+        <div class="vacancy">
+          <h2 class="tk-tenon">Learning&Development</h2>
+          <span class="company">Bricoteam vzw</span>
+          <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aspernatur et dolor suscipit animi temporibus, tenetur, autem distinctio fugiat eius placeat quia? Ea molestias non ipsum iste itaque reiciendis asperiores tempora dolores! Corporis voluptas accusantium optio earum ut aliquid iure maiores veniam recusandae, eos repellendus quisquam nam quibusdam velit eveniet.</span>
+          <a class="linkToWebpage" href="https://ld3.be/anker-nieuw/" target="_blank">ga naar de website</a>
+        </div>
+        <div class="vacancy">
+          <h2 class="tk-tenon">Learning&Development</h2>
+          <span class="company">Bricoteam vzw</span>
+          <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aspernatur et dolor suscipit animi temporibus, tenetur, autem distinctio fugiat eius placeat quia? Ea molestias non ipsum iste itaque reiciendis asperiores tempora dolores! Corporis voluptas accusantium optio earum ut aliquid iure maiores veniam recusandae, eos repellendus quisquam nam quibusdam velit eveniet.</span>
+          <a class="linkToWebpage" href="https://ld3.be/anker-nieuw/" target="_blank">ga naar de website</a>
+        </div>
+        <div class="vacancy">
+          <h2 class="tk-tenon">Learning&Development</h2>
+          <span class="company">Bricoteam vzw</span>
+          <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aspernatur et dolor suscipit animi temporibus, tenetur, autem distinctio fugiat eius placeat quia? Ea molestias non ipsum iste itaque reiciendis asperiores tempora dolores! Corporis voluptas accusantium optio earum ut aliquid iure maiores veniam recusandae, eos repellendus quisquam nam quibusdam velit eveniet.</span>
+          <a class="linkToWebpage" href="https://ld3.be/anker-nieuw/" target="_blank">ga naar de website</a>
+        </div>
+        <div class="vacancy">
+          <h2 class="tk-tenon">Learning&Development</h2>
+          <span class="company">Bricoteam vzw</span>
+          <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aspernatur et dolor suscipit animi temporibus, tenetur, autem distinctio fugiat eius placeat quia? Ea molestias non ipsum iste itaque reiciendis asperiores tempora dolores! Corporis voluptas accusantium optio earum ut aliquid iure maiores veniam recusandae, eos repellendus quisquam nam quibusdam velit eveniet.</span>
+          <a class="linkToWebpage" href="https://ld3.be/anker-nieuw/" target="_blank">ga naar de website</a>
+        </div>
       </div>
       <h2>Geen open vacatures gevonden,</h2>
       <h2>kom later nog eens terug.</h2>
