--- a/about/index.html
+++ b/about/index.html
@@ -22,12 +22,12 @@
     <!-- Hoofdmenu (desktop navigatie) -->
     <div class="header main">
       <a href="#partners">Partners</a>
-      <a href="about/">About</a>
-      <a class="img">
+      <a>About</a>
+      <a href="../" class="img">
         <img src="/images/poutrel_logo.png" alt="Poutrel logo">
       </a>
-      <a href="map/">Locaties</a>
-      <a href="jobs/">Jobs</a>
+      <a href="../map/">Locaties</a>
+      <a href="../jobs/">Jobs</a>
       <div class="languages">
         <a href="#fr">FR</a>
         <a href="#nl">NL</a>
