--- a/jobs/index.html
+++ b/jobs/index.html
@@ -30,7 +30,7 @@
     </div>
   </header>
   <main class="wrapper jobs">
-    <div class="canvasJobs1">
+    <div class="imageJobs1">
       <img src="../images/jobs-top.png" alt="">
     </div>
     <div class="vacancies">
