--- a/jobs/index.html
+++ b/jobs/index.html
@@ -88,8 +88,7 @@
       <h2>Geen open vacatures gevonden,</h2>
       <h2>kom later nog eens terug.</h2>
     </div>
-    <div class="canvasJobs2">
-      <canvas id="canvas2"></canvas>
+    <div class="imageJobs2">
     </div>
   </main>
 </body>
