--- a/fr-be/jobs/form/index.html
+++ b/fr-be/jobs/form/index.html
@@ -19,6 +19,9 @@
       <div class="l1 line"></div>
       <div class="l2 line"></div>
       <div class="l3 line"></div>
+      <div class="logo">
+        <img class="phone img" src="../../../images/logos/poutrel_logo.png" alt="poutrel logo">
+      </div>
     </label>
     <div class="header other">
       <a href="../../" class="img">
@@ -41,9 +44,12 @@
     <img src="../../../images/jobs/form/form-ball.png" class="ball" alt="image du formulaire">
     <div>
       <div class="motivation">
-        <h2>Vous êtes à un pas de l'objectif !</h2>
-        <span>Veuillez remplir toutes les informations</span>
-        <span>nécessaires dans le formulaire</span>
+        <img class="phone img" src="../../../images/jobs/form/form_phone_top.png" alt="form top image for phone">
+        <div class="column">
+          <h2>Vous êtes à un pas de l'objectif !</h2>
+          <span>Veuillez remplir toutes les informations</span>
+          <span>nécessaires dans le formulaire</span>
+        </div>
       </div>
       <div class="form-job">
         <div>
@@ -59,6 +65,7 @@
         <a href="../">Retour</a>
       </div>
     </div>
+    <img class="phone img" src="../../../images/jobs/form/form_phone_bottom.png" alt="form bottom image for phone">
   </main>
 </body>
 </html>
