--- a/nl-be/jobs/index.html
+++ b/nl-be/jobs/index.html
@@ -39,6 +39,7 @@
   <main class="wrapper jobs">
     <div class="imageJobs1">
       <img src="../../images/jobs/top.png" alt="">
+      <img class="phone img" src="../../images/jobs/vacatures_phone_top.png" alt="Phone top image">
     </div>
     <div class="vacancies">
       <h1>Vacatures</h1>
@@ -48,56 +49,56 @@
           <h3 class="stage">Stage</h3>
           <span class="company">Bricoteam vzw</span>
           <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aspernatur et dolor suscipit animi temporibus, tenetur, autem distinctio fugiat eius placeat quia?</span>
-          <a class="linkToWebpage" href="form/" target="_blank">Ga naar de website</a>
+          <a class="linkToWebpage" href="form/">Ga naar de website</a>
         </div>
         <div class="vacancy">
           <h2 class="tk-tenon">Learning & Development</h2>
           <h3 class="vacancy-job">Vacature</h3>
           <span class="company">Bricoteam vzw</span>
           <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aspernatur et dolor suscipit animi temporibus, tenetur, autem distinctio fugiat eius placeat quia?</span>
-          <a class="linkToWebpage" href="form/" target="_blank">Ga naar de website</a>
+          <a class="linkToWebpage" href="form/">Ga naar de website</a>
         </div>
         <div class="vacancy">
           <h2 class="tk-tenon">Learning & Development</h2>
           <h3 class="other">Inschakelingsbanen</h3>
           <span class="company">Bricoteam vzw</span>
           <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aspernatur et dolor suscipit animi temporibus, tenetur, autem distinctio fugiat eius placeat quia?</span>
-          <a class="linkToWebpage" href="form/" target="_blank">Ga naar de website</a>
+          <a class="linkToWebpage" href="form/">Ga naar de website</a>
         </div>
         <div class="vacancy">
           <h2 class="tk-tenon">Learning & Development</h2>
           <h3 class="volonteer">Vrijwilliger</h3>
           <span class="company">Bricoteam vzw</span>
           <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aspernatur et dolor suscipit animi temporibus, tenetur, autem distinctio fugiat eius placeat quia?</span>
-          <a class="linkToWebpage" href="form/" target="_blank">Ga naar de website</a>
+          <a class="linkToWebpage" href="form/">Ga naar de website</a>
         </div>
         <div class="vacancy">
           <h2 class="tk-tenon">Learning & Development</h2>
           <h3 class="vacancy-job">Vacature</h3>
           <span class="company">Bricoteam vzw</span>
           <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aspernatur et dolor suscipit animi temporibus, tenetur, autem distinctio fugiat eius placeat quia?</span>
-          <a class="linkToWebpage" href="form/" target="_blank">Ga naar de website</a>
+          <a class="linkToWebpage" href="form/">Ga naar de website</a>
         </div>
         <div class="vacancy">
           <h2 class="tk-tenon">Learning & Development</h2>
           <h3 class="volonteer">Vrijwilliger</h3>
           <span class="company">Bricoteam vzw</span>
           <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aspernatur et dolor suscipit animi temporibus, tenetur, autem distinctio fugiat eius placeat quia?</span>
-          <a class="linkToWebpage" href="form/" target="_blank">Ga naar de website</a>
+          <a class="linkToWebpage" href="form/">Ga naar de website</a>
         </div>
         <div class="vacancy">
           <h2 class="tk-tenon">Learning & Development</h2>
           <h3 class="other">Inschakelingsbanen</h3>
           <span class="company">Bricoteam vzw</span>
           <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aspernatur et dolor suscipit animi temporibus, tenetur, autem distinctio fugiat eius placeat quia?</span>
-          <a class="linkToWebpage" href="form/" target="_blank">Ga naar de website</a>
+          <a class="linkToWebpage" href="form/">Ga naar de website</a>
         </div>
         <div class="vacancy">
           <h2 class="tk-tenon">Learning & Development</h2>
           <h3 class="vacancy-job">Vacature</h3>
           <span class="company">Bricoteam vzw</span>
           <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aspernatur et dolor suscipit animi temporibus, tenetur, autem distinctio fugiat eius placeat quia?</span>
-          <a class="linkToWebpage" href="form/" target="_blank">Ga naar de website</a>
+          <a class="linkToWebpage" href="form/">Ga naar de website</a>
         </div>
       </div>
       <h2>Geen open vacatures gevonden,</h2>
@@ -105,6 +106,7 @@
     </div>
     <div class="imageJobs2">
       <img src="../../images/jobs/bottom.png" alt="">
+      <img class="phone img" src="../../images/jobs/vacatures_phone_bottom.png" alt="Phone bottom image">
       <div>
         <a href="../map/">Vind ons hier!</a>
       </div>
