fixed some bugs

--- a/nl-be/jobs/index.html
+++ b/nl-be/jobs/index.html
@@ -19,6 +19,9 @@
       <div class="l1 line"></div>
       <div class="l2 line"></div>
       <div class="l3 line"></div>
+      <div class="logo">
+        <img class="phone img" src="../../images/logos/poutrel_logo.png" alt="poutrel logo">
+      </div>
     </label>
     <div class="header other">
       <a href="../" class="img">
@@ -48,56 +51,56 @@
           <h2 class="tk-tenon">Learning & Development</h2>
           <h3 class="stage">Stage</h3>
           <span class="company">Bricoteam vzw</span>
-          <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aspernatur et dolor suscipit animi temporibus, tenetur, autem distinctio fugiat eius placeat quia?</span>
+          <span class="description">Voor deze functie is POUTREL op zoek naar een verantwoordelijke 'learning and development'.</span>
           <a class="linkToWebpage" href="form/">Ga naar de website</a>
         </div>
         <div class="vacancy">
           <h2 class="tk-tenon">Learning & Development</h2>
           <h3 class="vacancy-job">Vacature</h3>
           <span class="company">Bricoteam vzw</span>
-          <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aspernatur et dolor suscipit animi temporibus, tenetur, autem distinctio fugiat eius placeat quia?</span>
+          <span class="description">Voor deze functie is POUTREL op zoek naar een verantwoordelijke 'learning and development'.</span>
           <a class="linkToWebpage" href="form/">Ga naar de website</a>
         </div>
         <div class="vacancy">
           <h2 class="tk-tenon">Learning & Development</h2>
           <h3 class="other">Inschakelingsbanen</h3>
           <span class="company">Bricoteam vzw</span>
-          <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aspernatur et dolor suscipit animi temporibus, tenetur, autem distinctio fugiat eius placeat quia?</span>
+          <span class="description">Voor deze functie is POUTREL op zoek naar een verantwoordelijke 'learning and development'.</span>
           <a class="linkToWebpage" href="form/">Ga naar de website</a>
         </div>
         <div class="vacancy">
           <h2 class="tk-tenon">Learning & Development</h2>
           <h3 class="volonteer">Vrijwilliger</h3>
           <span class="company">Bricoteam vzw</span>
-          <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aspernatur et dolor suscipit animi temporibus, tenetur, autem distinctio fugiat eius placeat quia?</span>
+          <span class="description">Voor deze functie is POUTREL op zoek naar een verantwoordelijke 'learning and development'.</span>
           <a class="linkToWebpage" href="form/">Ga naar de website</a>
         </div>
         <div class="vacancy">
           <h2 class="tk-tenon">Learning & Development</h2>
           <h3 class="vacancy-job">Vacature</h3>
           <span class="company">Bricoteam vzw</span>
-          <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aspernatur et dolor suscipit animi temporibus, tenetur, autem distinctio fugiat eius placeat quia?</span>
+          <span class="description">Voor deze functie is POUTREL op zoek naar een verantwoordelijke 'learning and development'.</span>
           <a class="linkToWebpage" href="form/">Ga naar de website</a>
         </div>
         <div class="vacancy">
           <h2 class="tk-tenon">Learning & Development</h2>
           <h3 class="volonteer">Vrijwilliger</h3>
           <span class="company">Bricoteam vzw</span>
-          <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aspernatur et dolor suscipit animi temporibus, tenetur, autem distinctio fugiat eius placeat quia?</span>
+          <span class="description">Voor deze functie is POUTREL op zoek naar een verantwoordelijke 'learning and development'.</span>
           <a class="linkToWebpage" href="form/">Ga naar de website</a>
         </div>
         <div class="vacancy">
           <h2 class="tk-tenon">Learning & Development</h2>
           <h3 class="other">Inschakelingsbanen</h3>
           <span class="company">Bricoteam vzw</span>
-          <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aspernatur et dolor suscipit animi temporibus, tenetur, autem distinctio fugiat eius placeat quia?</span>
+          <span class="description">Voor deze functie is POUTREL op zoek naar een verantwoordelijke 'learning and development'.</span>
           <a class="linkToWebpage" href="form/">Ga naar de website</a>
         </div>
         <div class="vacancy">
           <h2 class="tk-tenon">Learning & Development</h2>
           <h3 class="vacancy-job">Vacature</h3>
           <span class="company">Bricoteam vzw</span>
-          <span class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aspernatur et dolor suscipit animi temporibus, tenetur, autem distinctio fugiat eius placeat quia?</span>
+          <span class="description">Voor deze functie is POUTREL op zoek naar een verantwoordelijke 'learning and development'.</span>
           <a class="linkToWebpage" href="form/">Ga naar de website</a>
         </div>
       </div>
